add up more model

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,11 +29,12 @@ services:
       - "9003:8003"
     command: ["uvicorn", "main_jailbreak:app", "--host", "0.0.0.0", "--port", "8003"]
 
-#  redundant-topic-detection:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#      target: guard-rails-ai-redundent
-#    container_name: sensitive-topic-detector
-#    ports:
-#      - "9004:8000"
+  redundant-topic-detection:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: guard-rails-ai-redundent
+    container_name: sensitive-topic-detector
+    ports:
+      - "9004:8004"
+    command: ["uvicorn", "main_jailbreak:app", "--host", "0.0.0.0", "--port", "8004"]
